# testinfra-supervisor

./: README.rst  setup.cfg  setup.py  test_testinfra_supervisor.py
testinfra_supervisor/: plugin.py
