[metadata]
name = testinfra-supervisor
author = Jimmy Tang
author-email = jimmy_tang@rapid7.com
summary = Supervisor module for checking supervisor managed processes
home-page = http://github.com/jcftang-r7/testinfra-supervisor
description-file = README.rst
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration

[files]
packages =
    testinfra_supervisor

[entry_points]
pytest11 =
    pytest11.testinfra_supervisor = testinfra_supervisor.plugin
